--- a/tooling/docker/compose.yml
+++ b/tooling/docker/compose.yml
@@ -9,6 +9,8 @@ services:
     command: "redis-server --save 20 1 --loglevel warning"
     volumes:
       - redis_data:/data
+    ports:
+      - 6379:6379
 
   watcher:
     build:
