--- a/sqlc.yml
+++ b/sqlc.yml
@@ -5,5 +5,6 @@ sql:
     queries: "./db/queries"
     gen:
       go:
+        emit_json_tags: true
         package: "repository"
         out: "pkg/repository"
